[Add] add job API
